<resources>
    <string name="app_name">BoardGameCollector</string>
    <string name="username">Username</string>
    <string name="configuration">Configuration</string>
    <string name="submit">Submit</string>
    <string name="synchronization">Synchronization</string>
    <string name="lastSynchronization">Last synchronization</string>
    <string name="notSynchronized">Not synchronized</string>
    <string name="synchronize">Synchronize</string>
    <string name="navOpen">Open</string>
    <string name="navClose">Close</string>
    <string name="boardGames">Board Games</string>
    <string name="title">Title</string>
    <string name="rank">Rank</string>
    <string name="year">Year</string>
    <string name="boardGameExpansions">Board Game Expansions</string>
    <string name="home">Home</string>
    <string name="rankHistory">Rank History</string>
    <string name="noData">Not enough data - %1$s point(s)</string>
    <string name="gameImage">Game Image</string>
    <string name="userHello">Hello, %1$s!</string>
    <string name="noTitle">No Title</string>
    <string name="ordinalNumberPlaceholder">%1$s</string>
    <string name="clearData">Clear Data</string>
    <string name="removeWarning">"Are you sure? This operation will remove all data from database!"</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="inQueue">"You are in queue. Please wait."</string>
    <string name="connectionError">"Error. Make sure you have internet connection."</string>
    <string name="hello">Hello!</string>
    <string name="numberOfGames">Number of Games</string>
    <string name="numberOfExpansions">Number of Expansions</string>
    <string name="removeNonExistentGames">Remove non-existent Games</string>
    <string name="ordinalNumber">No.</string>
    <string name="titleAsc">Title A->Z</string>
    <string name="titleDesc">Title Z->A</string>
    <string name="rankAsc">Rank Asc</string>
    <string name="rankDesc">Rank Desc</string>
    <string name="yearAsc">Year Asc</string>
    <string name="yearDesc">Year Desc</string>
    <string name="syncWarning">"Do you want to synchronize? The last sync was less than 24 hours ago."</string>
    <string name="bggUsername">BGG Username</string>
</resources>